fix text truncation

--- a/app/stats/localComponents/HallOfFame/HallOfFame.module.scss
+++ b/app/stats/localComponents/HallOfFame/HallOfFame.module.scss
@@ -45,12 +45,14 @@
   @include flex-y(null);
 
   align-items: flex-start;
-  flex: 1;
+  min-width: 0;
 
   & > * {
+    flex-shrink: 1;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    width: 100%
   }
 }
 
